--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title> </title>
   </head>
   <body>
-<img src="t.jpg">
+<input type="button" value="Покажи картинку"
+    onclick="document.getElementById('pic')
+                .style.display = 'block'"/>
+<img id="pic" src="t.jpg" style="display: none"/>
   </body>
 </html>
